--- a/app/Components/Projects/Project.css
+++ b/app/Components/Projects/Project.css
@@ -1,5 +1,3 @@
-/* ProjectBox.css */
-
 .project-container {
     display: flex;
     flex-wrap: wrap;
@@ -13,7 +11,8 @@
     max-width: 400px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 10px; /* Aggiunto margine inferiore per separare i box */
+    margin: 10px; 
+    margin-top: 40px;
   }
   
   .project-title {
@@ -33,12 +32,12 @@
   
   .link-icon {
     display: flex;
-    margin-top: 20px; /* Aggiunto margine superiore tra le icone */
+    margin-top: 20px; 
     font-size: 20px;
   }
 
   .link-icon a {
-    margin-right: 30px; /* Aggiunto margine a destra tra le icone */
+    margin-right: 30px; 
     transition: .2s all ease;
   }
 
